# r64-db-engine

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  REVIEW-postgres-2026-05-27.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-a-driver.md  architecture.md  config-reference.md  quickstart.md
docs/conformance/: gate-a-classification.md  gate-a-proof.md
docs/operator/: row64-server-deployment.md  troubleshooting.md
examples/: cachyos-demo-daemon.yaml  cachyos-demo-utf8.yaml  cachyos-demo.yaml  cachyos-live-daemon.yaml  cachyos-live-utf8.yaml  cachyos-live.yaml  incremental.yaml  minimal.yaml  production.yaml
scripts/: dev_postgres.sh  seed_postgres.py
src/r64_db_engine/: __init__.py  cli.py
src/r64_db_engine/conformance/: __init__.py  coercers.py  contract.py  generator.py  spec.py
src/r64_db_engine/core/: __init__.py  coercion.py  config.py  daemon.py  driver.py  health.py  logging.py  metrics.py  ramdb_writer.py  state.py  systemd.py
src/r64_db_engine/drivers/: __init__.py
src/r64_db_engine/drivers/clickhouse/: __init__.py  spec.py
src/r64_db_engine/drivers/postgres/: __init__.py  coercion.py  driver.py  spec.py
tests/: conftest.py
tests/conformance/: test_gate_a_postgres.py  test_generator_guards.py  test_pg_self_regeneration.py  test_wrapper_types.py
tests/core/: test_coercion_framework.py  test_config.py  test_daemon.py  test_health.py  test_ramdb_writer.py  test_state.py
tests/drivers/postgres/: test_coercion.py  test_driver.py  test_driver_security.py
tests/e2e/: test_postgres_to_ramdb.py
