[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r64-db-engine"
version = "0.1.0"
description = "Supervised daemon that materializes external database tables into Row64 .ramdb files."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kos Russell" }]
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Exact pin: the row64tools codec is load-bearing for fidelity (int64->int32
    # narrowing + the overflow guard). 1.0.11 is the version Gate A was proven
    # against; pinning keeps local and CI deterministic. See docs/conformance/.
    "row64tools==1.0.11",
]

[project.optional-dependencies]
metrics = ["prometheus_client>=0.17"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
r64-db-engine = "r64_db_engine.cli:main"

[project.urls]
Homepage = "https://github.com/kosmosis12/r64-db-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
r64_db_engine = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a real Postgres (run with --integration)",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/drivers/postgres/test_driver.py" = ["E402"]
"tests/e2e/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = false
warn_redundant_casts = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
